# audin

./: Cargo.toml
src/: lib.rs  main.rs
src/nn/: mod.rs
src/nn/model/: mod.rs  moonshine_base.rs
src/pipeline/: stream.rs  transcriber.rs
src/utils/: audio.rs  cache.rs  mod.rs  network.rs
