[package]
name = "audin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ort = "2.0.0-rc.12"
reqwest = { version = "0.13", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
indicatif = "0.17"
log = "0.4.32"
env_logger = "0.11.10"

[dev-dependencies]
tempfile = "3"
